Made shared with list div overflow auto and provided a max-height to prevent warping of the recipe view if the shared with list is long.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -74,6 +74,10 @@ h5 {
     width: 75%;
     margin:0 12.5%;
 }
+#share_with_list {
+    max-height: 40px;
+    overflow: auto;
+}
 .form_tips{
     font-size: 0.8rem;
 }
